syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.x.grpc.manage";
option java_outer_classname = "ManageServiceProto";

package manage;

// 管理服务
service ManageService {
  // 通用操作执行
  rpc ExecuteOperation (ExecuteOperationRequest) returns (ExecuteOperationResponse);
}

// 通用操作执行请求
message ExecuteOperationRequest {
  string operation = 1;
  map<string, string> params = 2;
}

// 通用操作执行响应
message ExecuteOperationResponse {
  bool success = 1;
  int32 code = 2;
  string message = 3;
  map<string, string> data = 4;
}